--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
     "serve": "vite serve"
   },
   "dependencies": {
-    "vue": "^3.4.30"
-  },
-  "devDependencies": {
+    "vue": "^3.4.30",
     "@vitejs/plugin-vue": "^5.0.5",
     "vite": "^5.3.1"
+  },
+  "devDependencies": {
+
   }
 }
