--- a/package.json
+++ b/package.json
@@ -9,11 +9,9 @@
     "serve": "vite serve"
   },
   "dependencies": {
-    "vue": "^3.4.30",
     "@vitejs/plugin-vue": "^5.0.5",
-    "vite": "^5.3.1"
-  },
-  "devDependencies": {
-
+    "vite": "^5.3.1",
+    "vue": "^3.4.30",
+    "vue-router": "^4.6.3"
   }
 }
