--- a/package.json
+++ b/package.json
@@ -6,12 +6,16 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "serve": "vite serve"
+    "serve": "vite serve",
+    "deploy": "npm run build && gh-pages -d dist"
   },
   "dependencies": {
     "@vitejs/plugin-vue": "^5.0.5",
     "vite": "^5.3.1",
     "vue": "^3.4.30",
     "vue-router": "^4.6.3"
+  },
+  "devDependencies": {
+    "gh-pages": "^6.3.0"
   }
 }
